--- a/account.html
+++ b/account.html
@@ -1,1 +1,26 @@
-html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Account Page</title>
+    <link rel="stylesheet" href="./assets/css/account.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+</head>
+<body>
+
+    <header></header>
+
+    <nav></nav>
+
+    <main>
+        <h1>Your Account</h1>
+    </main>
+
+    <footer></footer>
+
+    <script src="./assets/js/account.js"></script>
+    <script src="./assets/js/script.js"></script>
+    
+</body>
+</html>
