--- a/category.html
+++ b/category.html
@@ -14,6 +14,7 @@
     <nav></nav>
 
     <main class="category">
+        <h1 style="text-align: center; margin-top: 25px;">Our Products</h1>
         <div class="row">
             <div class="col-4">
                 <a href="product.html">
