--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <nav></nav>
 
     <main class="home">
+        <h1 style="text-align: center; margin-top: 25px;">Welcome!!!</h1>
         <div class="row">
             <div class="col-3">
                 <a href="category.html">
@@ -25,14 +26,14 @@
             <div class="col-3">
                 <a href="category.html">
                     <img src="" alt="">
-                    <h2>Category 1</h2>
+                    <h2>Category 2</h2>
                 </a>
             </div>
 
             <div class="col-3">
                 <a href="category.html">
                     <img src="" alt="">
-                    <h2>Category 1</h2>
+                    <h2>Category 3</h2>
                 </a>
             </div>
         </div>
@@ -41,14 +42,14 @@
             <div class="col-3">
                 <a href="category.html">
                     <img src="" alt="">
-                    <h2>Category 1</h2>
+                    <h2>Category 4</h2>
                 </a>
             </div>
 
             <div class="col-3">
                 <a href="category.html">
                     <img src="" alt="">
-                    <h2>Category 1</h2>
+                    <h2>Category 5</h2>
                 </a>
             </div>
 
